# AgentUp

./: .gitignore  CLAUDE.md  MCP_CLIENT_README.md  Makefile  PLUGIN_SCOPE_UPDATES.md  README.cn.md  README.md  agent_config.yaml  agentup.yml  cli-options-assessment.md  create-agent-findings.txt  debug_config.py  example_agent_config.yaml  mkdocs.yml  pyproject.toml  pytest.ini  routing-changes.md  test_logging_integration.py  test_push_notifications.md  test_scope_security.sh
docs/: authentication.md  cache-management.md  cli-customization-guide.md  demo-quick-reference.md  github_oauth2_troubleshooting.md  index.md  logging-configuration.md  middleware-auto-application.md  multimodal-usage-examples.md  push-notifications.md  qa-testing-scenarios.md  state-management.md  system-architecture-flows.md  system-prompts.md  universal-features-overview.md
examples/: logging_example.py
memory/: DECORATOR_PLUGIN_SYSTEM_MEMORY.md
scripts/: add_retry_handler.sh  agent.sh  benchmark_middleware.py  cleanup_test_output.sh  mcp_usage_example.py  release.py  simple_mcp_test.py  sync_templates.py  test_rate_limit.sh  test_retry.sh  test_streaming.py  test_templates.py
tests/: __init__.py  conftest.py  test_api_models.py  test_config_models.py  test_core_models.py  test_foundation.py  test_llm_providers_models.py  test_mcp_models.py  test_middleware_models.py  test_plugin_base.py  test_plugin_integration.py  test_plugin_system.py  test_plugins_models.py  test_security_models.py  test_services_models.py  test_state_models.py  test_types.py  test_validation_framework.py
(+230 files in other folders)
